--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,33 +12,17 @@
 
 <body>
 	<div class="container">
- 		<nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
-            <a class = "navbar-brand" href = "homepage-static.html">Watchlist App</a>
-            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
-               data-target = "#navbarSupportedContent" 
-               aria-controls = "navbarSupportedContent" aria-expanded = "false" 
-               aria-label = "Toggle navigation">
-               
-               <span class = "navbar-toggler-icon"></span>
-            </button>
-            
-            <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
-               <ul class = "navbar-nav mr-auto">
-                  <li class = "nav-item">
-                     <a class = "nav-link active" href = "/">Home</a>
-                  </li>
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "/watchlist">Watchlist</a> 
-                  </li>
-                  <li class = "nav-item ">
-                     <a class = "nav-link" href = "/watchlistItemForm">Submit an item</a>
-                  </li>
-               </ul>
-               
-            </div>
-      	</nav> 
+      <nav th:replace="fragments/menu :: menu"></nav>
 		<h2  class = "mt-4">Welcome to the Watchlist application!</h2> <br>
 		<h5 >Made for movie lovers who have a hard time choosing their next movie to watch.</h5> 	
+		<span th:if="!${#authorization.expression('isAuthenticated()')}">
+			Please Log in to add reviews or to view reviews from other users.
+		</span>
+
+		<span th:if="${#authorization.expression('isAuthenticated()')}">
+			Click on watchlist to views reviews!!
+		</span>
+
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
