--- a/src/main/resources/templates/watchlistItemForm.html
+++ b/src/main/resources/templates/watchlistItemForm.html
@@ -10,29 +10,7 @@
    
    <body>
       <div class = "container">
- 		<nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
-            <a class = "navbar-brand" href = "homepage-static.html">Watchlist App</a>
-            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
-               data-target = "#navbarSupportedContent" 
-               aria-controls = "navbarSupportedContent" aria-expanded = "false" 
-               aria-label = "Toggle navigation">
-               <span class = "navbar-toggler-icon"></span>
-            </button>
-            
-            <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
-               <ul class = "navbar-nav mr-auto">
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "/">Home</a>
-                  </li>
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "/watchlist">Watchlist</a>
-                  </li>
-                  <li class = "nav-item active">
-                     <a class = "nav-link" href = "/watchlistItemForm">Submit an item</a>
-                  </li>
-               </ul>
-            </div>
-      	</nav>         
+         <nav th:replace="fragments/menu :: menu"></nav>   
          <form action="#" method="post" th:action="@{/watchlistItemForm}" th:object="${watchlistItem}">
             <h2 class = "mt-4">Submit an item</h2>
             <hr/>
