github login working - okta login working

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
 		</span>
 
 		<span sec:authorize="isAuthenticated()">
-			Click on watchlist to views reviews!!
+			Click on <a href="http://localhost:8080/watchlist">watchlist</a> to views reviews!!
 		</span>
 
 	</div>
