--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -29,15 +29,41 @@
 			
 			<ul class = "navbar-nav mr-auto" sec:authorize="isAnonymous()">
 			</ul>
+			<!-- <ul class = "navbar-nav mr-auto" sec:authorize="isAnonymous()">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  Login
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					  <a class="dropdown-item" href="/oauth2/authorization/okta">Login with Okta</a>
+					  <a class="dropdown-item" href="/oauth2/authorization/github">Login with Github</a>
+					  <a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				  </li>
+			</ul> -->
 
 			<form method="post" th:action="@{/logout}" sec:authorize="isAuthenticated()" >
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 <button id="logout-button" type="submit" class="btn btn-danger">Logout</button>
             </form>
 
-            <form method="get" th:action="@{/oauth2/authorization/okta}" sec:authorize="isAnonymous()">
+            <!-- <form method="get" th:action="@{/oauth2/authorization/okta}" sec:authorize="isAnonymous()">
                 <button id="login-button" class="btn btn-success" type="submit">Login</button>
-            </form>
+            </form> -->
+			<div class="btn-group">
+				<button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  sec:authorize="isAnonymous()">
+				  Login
+				</button>
+				<div class="dropdown-menu">
+					<a class="dropdown-item" href="/oauth2/authorization/okta">Login with Okta</a>
+					<a class="dropdown-item" href="/oauth2/authorization/github">Login with Github</a>
+					<a class="dropdown-item" href="#">Something else here</a>
+				  <div class="dropdown-divider"></div>
+				  <a class="dropdown-item" href="#">Separated link</a>
+				</div>
+			  </div>
+
+			
 			
 		</div>
 	</nav> 
