Categorize by user id

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,8 +21,10 @@
 		</span>
 
 		<span sec:authorize="isAuthenticated()">
-			Click on <a href="http://localhost:8080/watchlist">watchlist</a> to views reviews!!
+			Click on <a href="http://localhost:8080/watchlist">watchlist</a> to views your reviews!!
 		</span>
+
+		
 
 	</div>
 
